src/objects/Withheld__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Withheld</relationshipLabel>
        <relationshipName>Withheld</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Withheld Contact</relationshipLabel>
        <relationshipName>Withheld1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <label>Date Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Withheld</relationshipLabel>
        <relationshipName>Withheld</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Withheld_Banner__c</fullName>
        <formula>IF (  text(Withheld_Type__c) =&quot;A&quot;,IMAGE(&apos;/servlet/servlet.FileDownload?file=01558000003BxCj&apos;,&apos;&apos;),
IF (  text(Withheld_Type__c) =&quot;B&quot;,IMAGE(&apos;/servlet/servlet.FileDownload?file=01558000003BxCk&apos;,&apos;&apos;),
IF (  text(Withheld_Type__c) =&quot;C&quot;,IMAGE(&apos;/servlet/servlet.FileDownload?file=01558000003BxCl&apos;,&apos;&apos;),
IF (  text(Withheld_Type__c) =&quot;D&quot;,IMAGE(&apos;/servlet/servlet.FileDownload?file=01558000003BxCm&apos;,&apos;&apos;),&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Withheld Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withheld_Reason__c</fullName>
        <label>Withheld Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Withheld_Type__c</fullName>
        <inlineHelpText>A = candidate request
B = school request
C = safeguarding issue raised
D = DNC/File Out candidate</inlineHelpText>
        <label>Withheld Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Withheld</label>
    <nameField>
        <displayFormat>WH-{00000}</displayFormat>
        <label>Withheld Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Withheld</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>